3.3.2: - добавлено автообновление бота - добавлена возможность прописать свой скрипт для автообновления МТС - добавлена возможность слать срочные сообщения пользователю на комп - улучшено отслеживания состояния железа - исправлены ошибки